infrastructure/k8s/predict-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # run within the app namespace
  name: prediction
  namespace: app
  labels:
    app: prediction
spec:
  replicas: 1 # only run one
  selector:
    matchLabels:
      app: prediction
  template:
    metadata:
      labels:
        app: prediction
    spec:
      containers:
      - name: predict
        image: groceryspend/predict:local
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256M"
            cpu: "10m"
          limits:
            memory: "512M"
            cpu: "50m"
