infrastructure/k8s/server-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # run within the app namespace
  name: server
  namespace: app
  labels:
    app: server
spec:
  replicas: 1 # only run one
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        # <IMAGE> is replaced by a docker uri and tag by the CICD process
        image: <IMAGE>
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
