infrastructure/k8s/web-portal-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # run within the app namespace
  name: web-portal
  namespace: app
  labels:
    app: web-portal
spec:
  replicas: 1 # only run one
  selector:
    matchLabels:
      app: web-portal
  template:
    metadata:
      labels:
        app: web-portal
    spec:
      containers:
      - name: web-portal
        # <IMAGE> is replaced by a docker uri and tag by the CICD process
        image: <IMAGE>
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64M"
            cpu: "10m"
          limits:
            memory: "512M"
            cpu: "50m"
