infrastructure/k8s/predict-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prediction-svc
  namespace: app
spec:
  selector:
    app: prediction
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
