infrastructure/k8s/server-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: server-svc
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
