infrastructure/k8s/web-portal-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-portal-svc
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: web-portal
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
