infrastructure/k8s/web-www-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web-www-svc
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: web-www
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
