infrastructure/k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: app
  name: main-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: web-portal-svc
      port:
        number: 80
  rules:
  - host: api.groceryspend.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-svc
            port:
              number: 5000
  - host: portal.groceryspend.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-portal-svc
            port:
              number: 80
